--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -12,10 +12,8 @@ The imported CSS rules must precede all other types of rules.
 */
 @import '~nativescript-theme-core/css/core.light.css';
 
-/*
-The following CSS rule changes the font size of all UI
-components that have the btn class name.
-*/
-.btn {
-    font-size: 18;
+.copyright {
+    background-color:blue;
+    color: white;
+    font-size: 12pt;
 }
